--- a/galaxy.yml
+++ b/galaxy.yml
@@ -18,3 +18,5 @@
       become: true
       become_user: "{{ galaxy_user.name }}"
     - galaxyproject.nginx
+    - geerlingguy.docker
+    - usegalaxy_eu.gie_proxy
