--- a/group_vars/galaxyservers.yml
+++ b/group_vars/galaxyservers.yml
@@ -32,6 +32,10 @@ galaxy_config:
     check_migrate_tools: false
     tool_data_path: "{{ galaxy_mutable_data_dir }}/tool-data"
     object_store_store_by: uuid
+    job_config_file: "{{ galaxy_config_dir }}/job_conf.xml"
+    interactivetools_enable: true
+    interactivetools_map: "{{ gie_proxy_sessions_path }}"
+    galaxy_infrastructure_url: "https://{{ inventory_hostname }}/"
   uwsgi:
     socket: 127.0.0.1:5000
     buffer-size: 16384
@@ -57,12 +61,22 @@ galaxy_config:
       - lib/galaxy/main.py
       - lib/galaxy/main.py
     farm: job-handlers:1,2
+galaxy_tool_config_files:
+  - "{{ galaxy_server_dir }}/config/tool_conf.xml.sample"
+  - "{{ galaxy_config_dir }}/tool_conf_interactive.xml"
+galaxy_config_templates:
+  - src: templates/galaxy/config/tool_conf_interactive.xml.j2
+    dest: "{{ galaxy_config_dir }}/tool_conf_interactive.xml"
+  - src: templates/galaxy/config/job_conf.xml.j2
+    dest: "{{ galaxy_config.galaxy.job_config_file }}"
+  - src: templates/galaxy/config/pulsar_app.yml.j2
+    dest: "{{ galaxy_config_dir }}/pulsar_app.yml"
 # systemd
 galaxy_manage_systemd: yes
 # Certbot
 certbot_auto_renew_hour: "{{ 23 |random(seed=inventory_hostname)  }}"
 certbot_auto_renew_minute: "{{ 59 |random(seed=inventory_hostname)  }}"
-certbot_auth_method: --webroot
+#certbot_auth_method: --webroot
 certbot_install_method: virtualenv
 certbot_auto_renew: yes
 certbot_auto_renew_user: root
@@ -74,17 +88,33 @@ certbot_post_renewal: |
     systemctl restart nginx || true
 certbot_domains:
  - "{{ inventory_hostname }}"
+ - "*.interactivetoolentrypoint.interactivetool.{{ inventory_hostname }}"
 certbot_agree_tos: --agree-tos
-
+certbot_dns_provider: digitalocean
+certbot_dns_credentials:
+  token:
 # NGINX
 nginx_selinux_allow_local_connections: true
 nginx_servers:
   - redirect-ssl
 nginx_ssl_servers:
   - galaxy
+  - galaxy-gie-proxy
 nginx_enable_default_server: false
 nginx_conf_http:
   client_max_body_size: 1g
 nginx_ssl_role: usegalaxy_eu.certbot
 nginx_conf_ssl_certificate: /etc/ssl/certs/fullchain.pem
 nginx_conf_ssl_certificate_key: /etc/ssl/user/privkey-nginx.pem
+# Interactive Tools
+docker_install_compose: false
+docker_users:
+  - "{{ galaxy_user.name }}"
+gie_proxy_dir: /srv/galaxy/gie-proxy/proxy
+gie_proxy_git_version: main
+gie_proxy_setup_nodejs: nodeenv
+gie_proxy_virtualenv_command: "{{ pip_virtualenv_command }}"
+gie_proxy_nodejs_version: "10.13.0"
+gie_proxy_virtualenv: /srv/galaxy/gie-proxy/venv
+gie_proxy_setup_service: systemd
+gie_proxy_sessions_path: "{{ galaxy_mutable_data_dir }}/interactivetools_map.sqlite"
